--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,6 @@
   <script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="./assets/js/mdb.min.js"></script>
+  <script src="node_modules/chart.js/src/chart.js"></script>
 </body>
 </html>
